--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Polling App | CalliCoder</title>
-    <meta name="description" content="Full Stack Polling App built with Spring Boot, Spring Security, JWT, MySQL, React and Ant Design.">
+    <title>Space App</title>
+    <meta name="description" content="Full Stack Space App built with Spring Boot, Spring Security, JWT, PostgreSQL, React and Ant Design based on CalliCoders tutorial.">
   </head>
   <body>
     <noscript>
